--- a/package.json
+++ b/package.json
@@ -3,9 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.2.1",
+    "axios": "^0.19.0",
+    "circular-json": "^0.5.9",
+    "cpf-check": "^3.0.0",
+    "dateformat": "^3.0.3",
+    "material-table": "^1.40.1",
+    "mui-datatables": "2.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^4.0.8",
+    "react-redux": "^7.1.0",
+    "react-redux-toastr": "^7.5.1",
+    "react-router-dom": "^5.0.1",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "3.0.1",
+    "react-text-mask": "^5.4.3",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.4",
+    "redux-form-input-masks": "^2.0.1",
+    "redux-form-material-ui": "^4.3.4",
+    "redux-form-normalize-on-blur": "^1.0.5",
+    "redux-multi": "^0.1.12",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
